{
  "version": 4,
  "terraform_version": "0.14.7",
  "serial": 223,
  "lineage": "bca8857c-76c4-172b-a88d-bc24a9b3e0d5",
  "resources": [
    {
      "mode": "data",
      "type": "aws_eip",
      "name": "k8s",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "domain": "vpc",
            "id": "eipalloc-099d09df1f73ec6a0",
            "public_dns": "ec2-23-22-28-126.compute-1.amazonaws.com",
            "public_ip": "23.22.28.126",
            "public_ipv4_pool": "amazon",
            "tags": {
              "Name": "worker-3.nono.io"
            }
          }
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_default_route_table",
      "name": "k8s",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "default_route_table_id": "rtb-0059a78e2afc1430e",
            "id": "rtb-0059a78e2afc1430e",
            "owner_id": "288053528466",
            "propagating_vgws": null,
            "route": [
              {
                "cidr_block": "",
                "egress_only_gateway_id": "",
                "gateway_id": "igw-0e1ba8448acac00f1",
                "instance_id": "",
                "ipv6_cidr_block": "::/0",
                "nat_gateway_id": "",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              },
              {
                "cidr_block": "0.0.0.0/0",
                "egress_only_gateway_id": "",
                "gateway_id": "igw-0e1ba8448acac00f1",
                "instance_id": "",
                "ipv6_cidr_block": "",
                "nat_gateway_id": "",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": null,
            "vpc_id": "vpc-0208006377bbc6dbb"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_internet_gateway.k8s",
            "aws_vpc.k8s"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_instance",
      "name": "k8s",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "ami": "ami-0947214b956697846",
            "arn": "arn:aws:ec2:us-east-1:288053528466:instance/i-0b73b53b64811a117",
            "associate_public_ip_address": false,
            "availability_zone": "us-east-1f",
            "cpu_core_count": 2,
            "cpu_threads_per_core": 1,
            "disable_api_termination": false,
            "ebs_optimized": false,
            "enclave_options": [
              {
                "enabled": false
              }
            ],
            "get_password_data": false,
            "hibernation": false,
            "id": "i-0b73b53b64811a117",
            "instance_state": "running",
            "instance_type": "t4g.micro",
            "ipv6_address_count": 1,
            "ipv6_addresses": [
              "2600:1f18:265b:b00::17"
            ],
            "key_name": "k8s",
            "metadata_options": [
              {
                "http_endpoint": "enabled",
                "http_put_response_hop_limit": 1,
                "http_tokens": "optional"
              }
            ],
            "monitoring": false,
            "primary_network_interface_id": "eni-0175cab61cde53fc6",
            "private_dns": "ip-10-240-1-23.ec2.internal",
            "private_ip": "10.240.1.23",
            "root_block_device": [
              {
                "delete_on_termination": true,
                "device_name": "/dev/sda1",
                "encrypted": false,
                "iops": 100,
                "throughput": 0,
                "volume_id": "vol-04a2b4f27ccd42861",
                "volume_size": 26,
                "volume_type": "gp2"
              }
            ],
            "source_dest_check": true,
            "subnet_id": "subnet-0d1a46fc34f1f02e6",
            "tags": {
              "Name": "k8s Fedora 33 aarch64"
            },
            "tenancy": "default",
            "vpc_security_group_ids": [
              "sg-07b15de3cd4473ffc"
            ]
          },
          "dependencies": [
            "aws_key_pair.k8s",
            "aws_security_group.allow_everything",
            "aws_subnet.k8s",
            "aws_vpc.k8s"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_internet_gateway",
      "name": "k8s",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:288053528466:internet-gateway/igw-0e1ba8448acac00f1",
            "id": "igw-0e1ba8448acac00f1",
            "owner_id": "288053528466",
            "vpc_id": "vpc-0208006377bbc6dbb"
          },
          "dependencies": [
            "aws_vpc.k8s"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "k8s",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0570bf76dae82518e",
            "route_table_id": "rtb-0059a78e2afc1430e",
            "subnet_id": "subnet-0d1a46fc34f1f02e6"
          },
          "dependencies": [
            "aws_default_route_table.k8s",
            "aws_internet_gateway.k8s",
            "aws_subnet.k8s",
            "aws_vpc.k8s"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "allow_everything",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:288053528466:security-group/sg-07b15de3cd4473ffc",
            "description": "we are bold, we are brave, we are naked (as far as firewalls are concerned)",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [
                  "::/0"
                ],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-07b15de3cd4473ffc",
            "ingress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [
                  "::/0"
                ],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "name": "allow_everything",
            "name_prefix": "",
            "owner_id": "288053528466",
            "revoke_rules_on_delete": false,
            "tags": {
              "Name": "allow_everything"
            },
            "timeouts": null,
            "vpc_id": "vpc-0208006377bbc6dbb"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_vpc.k8s"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "k8s",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:288053528466:subnet/subnet-0d1a46fc34f1f02e6",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1f",
            "availability_zone_id": "use1-az5",
            "cidr_block": "10.240.1.0/24",
            "id": "subnet-0d1a46fc34f1f02e6",
            "ipv6_cidr_block": "2600:1f18:265b:b00::/64",
            "ipv6_cidr_block_association_id": "subnet-cidr-assoc-0a5172f30f8c86a65",
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "288053528466",
            "tags": {
              "Name": "k8s"
            },
            "vpc_id": "vpc-0208006377bbc6dbb"
          },
          "dependencies": [
            "aws_vpc.k8s"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_vpc",
      "name": "k8s",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:288053528466:vpc/vpc-0208006377bbc6dbb",
            "assign_generated_ipv6_cidr_block": true,
            "cidr_block": "10.240.0.0/16",
            "default_network_acl_id": "acl-023b96511396b47a1",
            "default_route_table_id": "rtb-0059a78e2afc1430e",
            "default_security_group_id": "sg-03f68006ec9c69245",
            "dhcp_options_id": "dopt-63836a06",
            "enable_classiclink": false,
            "enable_classiclink_dns_support": false,
            "enable_dns_hostnames": false,
            "enable_dns_support": true,
            "id": "vpc-0208006377bbc6dbb",
            "instance_tenancy": "default",
            "ipv6_association_id": "vpc-cidr-assoc-00ba7a1f600f0c900",
            "ipv6_cidr_block": "2600:1f18:265b:b00::/56",
            "main_route_table_id": "rtb-0059a78e2afc1430e",
            "owner_id": "288053528466",
            "tags": {
              "Name": "k8s"
            }
          }
        }
      ]
    }
  ]
}